feat: GITHUB-001, GITHUB-002 구현 완료